Cleaned the dashboard

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     }
   </style>
 </head>
-<body class="antialiased min-h-screen bg-black">
+<body class="antialiased min-h-screen bg-gray-800">
 <app-root></app-root>
 </body>
 </html>
